@@ -21,6 +21,7 @@ Changes in 1.2:
 - Fill ip parameter of tracker announce with current IPv6 address if not filled in by user in settings (267551)
 - Fix crash in PeerManager (287967)
 - Fix crash at exit when datachecker job is running (289153)
+- Fix crash due to bug in smaller then operator of net::Address (288444)
 
 Changes in 1.1.3:
 - Fix bug causing UPnP not to work properly if there is a question mark in the controlurl
